Integration to master (#35)
* [Task #3] Crear pantalla principal de búsqueda (#27)

* [Task #3] Crear pantalla principal de búsqueda

* [Task #3] Formato de clase

* [Task #4] Crear modelos de datos de la API (#28)

* [Task #4] Crear modelos de datos de la API (#29)

[Task #5] Agregar Retrofit para llamadas a la API

* [Task #10] Crear funciones para mapear datos a modelos del dominio

* Revert "[Task #10] Crear funciones para mapear datos a modelos del dominio"

This reverts commit e7f252c7577b4ad05977bf5c554163bec7f8b4bc.

* [Task #10] Crear funciones para mapear datos a modelos del dominio (#30)

* [Task #10] Crear funciones para mapear datos a modelos del dominio

* [Task #10] Crear funciones para mapear datos a modelos del dominio

* [Task #9] Integrar Koin con ViewModels (#31)

* [Task #18] Crear pantalla de detalles del clima (#32)

* [Task #16] Agregar Navigation Compose (#33)

* [Task #17] Crear ViewModel para detalles del clima (#34)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,10 @@
 
     <uses-sdk tools:overrideLibrary="androidx.navigationevent,androidx.navigationevent.compose,androidx.activity.ktx,androidx.lifecycle.livedata.core" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <application
+        android:name=".WeatherApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
